# timesched

./: .gitignore  Makefile  README.md  examples.py  pyproject.toml  setup.py  test-days.py  test.py  timesched.py
